[gd_scene load_steps=11 format=3 uid="uid://x2p2eksxd32a"]

[ext_resource type="Script" uid="uid://d3amsstffiwjq" path="res://clicker_panel/panel/clicker_panel.gd" id="1_uwsyt"]
[ext_resource type="PackedScene" uid="uid://m367ipptdm5" path="res://clicker_panel/upgrade/upgrade_panel.tscn" id="1_xksri"]
[ext_resource type="Theme" uid="uid://b6lpad2in8swy" path="res://styles/clicker_panel.tres" id="2_u1003"]
[ext_resource type="PackedScene" uid="uid://ccyhjvjtx51r5" path="res://clicker_panel/ability/ability_panel.tscn" id="2_uwsyt"]
[ext_resource type="Resource" uid="uid://dujcm3q487xt5" path="res://clicker_panel/resources/resource_folder/a1.tres" id="5_e1oca"]
[ext_resource type="Resource" uid="uid://by8atbdrd30f5" path="res://clicker_panel/resources/resource_folder/a2.tres" id="6_i4b7g"]
[ext_resource type="Resource" uid="uid://fxnb4e2hm8ke" path="res://clicker_panel/resources/resource_folder/a3.tres" id="7_gjnti"]
[ext_resource type="Resource" uid="uid://dty0l1cliceuj" path="res://clicker_panel/resources/resource_folder/a4.tres" id="8_c6ukv"]
[ext_resource type="Theme" uid="uid://dv3j47smgcddi" path="res://styles/health_bar.tres" id="8_oaxfa"]
[ext_resource type="Resource" uid="uid://k4iqwg6k6v4e" path="res://clicker_panel/resources/resource_folder/a5.tres" id="9_8q1aa"]

[node name="ClickerPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_uwsyt")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 0
offset_right = 106.0
offset_bottom = 270.0
mouse_filter = 2
theme = ExtResource("2_u1003")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
offset_left = 7.0
offset_top = 3.0
offset_right = 99.0
offset_bottom = 273.0
mouse_filter = 2
theme_override_constants/separation = 46

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="UpgradePanel" parent="PanelContainer/VBoxContainer/CenterContainer" instance=ExtResource("1_xksri")]
layout_mode = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="AbilityPanel1" parent="PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_uwsyt")]
layout_mode = 2
mouse_filter = 0
ability_type = ExtResource("5_e1oca")

[node name="AbilityPanel2" parent="PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_uwsyt")]
layout_mode = 2
mouse_filter = 0
ability_type = ExtResource("6_i4b7g")

[node name="AbilityPanel3" parent="PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_uwsyt")]
layout_mode = 2
mouse_filter = 0
ability_type = ExtResource("7_gjnti")

[node name="AbilityPanel4" parent="PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_uwsyt")]
layout_mode = 2
mouse_filter = 0
ability_type = ExtResource("8_c6ukv")

[node name="AbilityPanel5" parent="PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_uwsyt")]
layout_mode = 2
mouse_filter = 0
ability_type = ExtResource("9_8q1aa")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2
offset_left = 7.0
offset_top = 205.0
offset_right = 99.0
offset_bottom = 260.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/CenterContainer"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
theme = ExtResource("8_oaxfa")
value = 1.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("8_oaxfa")
text = "5/5"
